css/main.css
/* ... */
/* line 104, ../sass/main.scss */
#modal .set-container .settings [class='col-sm-4'] {
  margin-bottom: 8px;
}

/* line 112, ../sass/main.scss */
.pom-container {
  width: 100%;
}

/* line 114, ../sass/main.scss */
#pomodoro {
  max-width: 840px;
}
/* line 117, ../sass/main.scss */
#pomodoro .radial-progress {
  position: relative;
  width: 268px;
  height: 268px;
  -moz-border-radius: 50%;
  -webkit-border-radius: 50%;
  border-radius: 50%;
  margin: auto;
}
/* line 125, ../sass/main.scss */
#pomodoro .radial-progress .circle .mask, #pomodoro .radial-progress .circle .fill {
  width: 268px;
  height: 268px;
  position: absolute;
  -moz-border-radius: 50%;
  -webkit-border-radius: 50%;
  border-radius: 50%;
  -moz-backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -moz-transition: -moz-transform 0.4s;
  -o-transition: -o-transform 0.4s;
  -webkit-transition: -webkit-transform 0.4s;
  transition: transform 0.4s;
}
/* line 133, ../sass/main.scss */
#pomodoro .radial-progress .circle .mask {
  clip: rect(0px, 268px, 268px, 134px);
}
/* line 135, ../sass/main.scss */
#pomodoro .radial-progress .circle .mask .fill {
  clip: rect(0px, 134px, 268px, 0px);
  background-color: #a0e21d;
}
/* line 141, ../sass/main.scss */
#pomodoro .radial-progress #watch {
  position: absolute;
  top: 4px;
  left: 4px;
  width: 260px;
  height: 260px;
  background: #e2c21d;
  -moz-backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -moz-border-radius: 50%;
  -webkit-border-radius: 50%;
  border-radius: 50%;
  -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 4px 16px, rgba(0, 0, 0, 0.05) 0 0 16px inset;
  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 4px 16px, rgba(0, 0, 0, 0.05) 0 0 16px inset;
  box-shadow: rgba(0, 0, 0, 0.2) 0 4px 16px, rgba(0, 0, 0, 0.05) 0 0 16px inset;
  -moz-transition: background-color 1s;
  -o-transition: background-color 1s;
  -webkit-transition: background-color 1s;
  transition: background-color 1s;
  -moz-animation: app-start-pom 1.2s;
  -webkit-animation: app-start-pom 1.2s;
  animation: app-start-pom 1.2s;
  -moz-animation-fill-mode: forwards;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
}
/* line 156, ../sass/main.scss */
#pomodoro .radial-progress #watch div span {
  font-size: 4.8em;
  font-family: 'Ubuntu Mono', monospace;
}
@-moz-keyframes app-start-pom {
  from {
    top: -150px;
    opacity: 0;
  }
  to {
    top: 4px;
    opacity: 1;
  }
}
@-webkit-keyframes app-start-pom {
  from {
    top: -150px;
    opacity: 0;
  }
  to {
    top: 4px;
    opacity: 1;
  }
}
@keyframes app-start-pom {
  from {
    top: -150px;
    opacity: 0;
  }
  to {
    top: 4px;
    opacity: 1;
  }
}
/* line 169, ../sass/main.scss */
#pomodoro .pom-btn {
  z-index: 1;
  text-align: center;
  position: relative;
  height: 120px;
}
/* line 174, ../sass/main.scss */
#pomodoro .pom-btn button {
  background: none;
  border: solid 1px lightgray;
  outline: none;
  display: block;
  width: 90px;
  height: 90px;
  -moz-border-radius: 50%;
  -webkit-border-radius: 50%;
  border-radius: 50%;
  font-size: 1.9em;
  color: #4d4d4d;
  position: absolute;
  top: 50%;
  -moz-transform: translate(0, -50%);
  -ms-transform: translate(0, -50%);
  -webkit-transform: translate(0, -50%);
  transform: translate(0, -50%);
  -moz-transition: -moz-transform 0.2s;
  -o-transition: -o-transform 0.2s;
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
  -moz-backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}
/* line 189, ../sass/main.scss */
#pomodoro .pom-btn button:hover {
  -moz-transform: scale(1.2, 1.2) translateY(-45%);
  -ms-transform: scale(1.2, 1.2) translateY(-45%);
  -webkit-transform: scale(1.2, 1.2) translateY(-45%);
  transform: scale(1.2, 1.2) translateY(-45%);
  border: none;
  border-bottom: none !important;
  border-left: none !important;
  border-right: none !important;
}
/* line 197, ../sass/main.scss */
#pomodoro .pom-btn #left-btn {
  right: 0;
  border-bottom: solid 2px #a0e21d;
  border-left: solid 2px #a0e21d;
  -moz-animation: app-start-left-btn 1.2s;
  -webkit-animation: app-start-left-btn 1.2s;
  animation: app-start-left-btn 1.2s;
  -moz-animation-fill-mode: forwards;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
}
/* line 203, ../sass/main.scss */
#pomodoro .pom-btn #left-btn:hover {
  background: #a0e21d;
}
/* line 206, ../sass/main.scss */
#pomodoro .pom-btn #left-btn:active {
  -moz-box-shadow: rgba(0, 0, 0, 0.4) 0 2px 8px inset;
  -webkit-box-shadow: rgba(0, 0, 0, 0.4) 0 2px 8px inset;
  box-shadow: rgba(0, 0, 0, 0.4) 0 2px 8px inset;
}
/* line 210, ../sass/main.scss */
#pomodoro .pom-btn #right-btn {
  left: 0;
  border-bottom: solid 2px #e2601d;
  border-right: solid 2px #e2601d;
  -moz-animation: app-start-right-btn 1.2s;
  -webkit-animation: app-start-right-btn 1.2s;
  animation: app-start-right-btn 1.2s;
  -moz-animation-fill-mode: forwards;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
}
/* line 216, ../sass/main.scss */
#pomodoro .pom-btn #right-btn:hover {
  background: #e2601d;
}
/* line 219, ../sass/main.scss */
#pomodoro .pom-btn #right-btn:active {
  -moz-box-shadow: rgba(0, 0, 0, 0.4) 0 2px 8px inset;
  -webkit-box-shadow: rgba(0, 0, 0, 0.4) 0 2px 8px inset;
  box-shadow: rgba(0, 0, 0, 0.4) 0 2px 8px inset;
}
@-moz-keyframes app-start-left-btn {
  from {
    right: 100px;
    opacity: 0;
  }
  to {
    right: 0;
    opacity: 1;
  }
}
@-webkit-keyframes app-start-left-btn {
  from {
    right: 100px;
    opacity: 0;
  }
  to {
    right: 0;
    opacity: 1;
  }
}
@keyframes app-start-left-btn {
  from {
    right: 100px;
    opacity: 0;
  }
  to {
    right: 0;
    opacity: 1;
  }
}
@-moz-keyframes app-start-right-btn {
  from {
    left: 100px;
    opacity: 0;
  }
  to {
    left: 0;
    opacity: 1;
  }
}
/* ... */

